corrections alignement  et viewport

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,6 +148,8 @@ a {
 }
 .working .working__step {
   background-color: #F6F6F6;
+  display: flex;
+  align-items: center;
   margin-bottom: 40px;
   font-size: 23px;
   padding: 30px 40px;
